added local storage

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
         <aside class="col-4">
             <input type="text" id="searchBar">
             <button id="searchBtn"><i class="fas fa-search"></i></button>
+            <h3>Previous Searches</h3>
+            <div id="previous-search"></div>
         </aside>
         <main class="col-8">
             <section id="currentWeather">Current Weather</section>
+            <div id="current-weather"></div>
             <section id="weatherForecast">5-Day Forecast</section>
         </main>
     </div>
