--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
                 </div>
             </div>
 
-            <div class="row" id="forecast-container">
-                <div class="col-md-2 forecast bg-primary text-white m-2 rounded">day 1</div>
-                <div class="col-md-2 forecast bg-primary text-white m-2 rounded">day 2</div>
-                <div class="col-md-2 forecast bg-primary text-white m-2 rounded">day 3</div>
-                <div class="col-md-2 forecast bg-primary text-white m-2 rounded">day 4</div>
-                <div class="col-md-2 forecast bg-primary text-white m-2 rounded">day 5</div>
-            </div>
+            <div class="row" id="forecast-container"></div>
         </main>
     </div>
 
