--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -29,7 +28,8 @@
             <div id="previous-search"></div>
         </aside>
         <main class="col-8">
-            <section id="currentWeather">Current Weather</section>
+            <div id="currentWeather">
+                <h3>Current Weather</h3></div>
             <div id="current-weather"></div>
 
             <div class="row" id="fiveday-header">
